Bug 205015 - KarbonPart crashes when embedded in not in KarbonShell
Summary: KarbonPart crashes when embedded in not in KarbonShell
Status: RESOLVED FIXED
Alias: None
Product: karbon
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR crash
Target Milestone: ---
Assignee: Jan Hambrecht
URL:
Keywords:
: 205384 (view as bug list)
Depends on:
Blocks:
 
Reported: 2009-08-24 22:39 UTC by Albert Astals Cid
Modified: 2009-09-13 23:17 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Albert Astals Cid 2009-08-24 22:39:06 UTC
Version:            (using KDE 4.3.0)
OS:                Linux
Installed from:    Compiled From Sources

When embedding the KarbonPart in a shell that is not the Karbon Shell it crashes

#6  0xb6b8e5cc in QAction::setChecked(bool) () from /usr/lib/libQtGui.so.4
#7  0xb106e4be in KarbonView::reorganizeGUI (this=0x8588e58) at /usr/src/debug/koffice-2.0.2/karbon/ui/KarbonView.cpp:1028
#8  0xb10785c1 in KarbonView::KarbonView (this=0x8588e58, p=0x8597dc0, parent=0x83fc438, __in_chrg=<value optimized out>, __vtt_parm=<value optimized out>)
    at /usr/src/debug/koffice-2.0.2/karbon/ui/KarbonView.cpp:316
#9  0xb1066208 in KarbonPart::createViewInstance (this=0x8597dc0, parent=0x83fc438) at /usr/src/debug/koffice-2.0.2/karbon/ui/KarbonPart.cpp:147
#10 0xb0c42ce2 in KoDocument::createView (this=0x8597dc0, parent=0x83fc438) at /usr/src/debug/koffice-2.0.2/libs/main/KoDocument.cpp:341
#11 0xb0c56ea4 in KoDocument::openFile (this=0x8597dc0) at /usr/src/debug/koffice-2.0.2/libs/main/KoDocument.cpp:1581
#12 0xb7fd8d07 in KParts::ReadOnlyPart::openUrl(KUrl const&) () from /usr/lib/libkparts.so.4
#13 0xb0c4bc49 in KoDocument::openUrl (this=0x8597dc0, _url=...) at /usr/src/debug/koffice-2.0.2/libs/main/KoDocument.cpp:1389
#14 0xb4855a7e in Okular::FilePrinterPreviewPrivate::doPreview (this=0x81062d8) at /usr/src/debug/kdegraphics-4.3.0/okular/ui/fileprinterpreview.cpp:107
#15 0xb4855ce3 in Okular::FilePrinterPreview::showEvent (this=0xbf88381c, event=0xbf8836b0) at /usr/src/debug/kdegraphics-4.3.0/okular/ui/fileprinterpreview.cpp:153
#16 0xb6bea9e3 in QWidget::event(QEvent*) () from /usr/lib/libQtGui.so.4
#17 0xb6b9394c in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /usr/lib/libQtGui.so.4
#18 0xb6b9b2ee in QApplication::notify(QObject*, QEvent*) () from /usr/lib/libQtGui.so.4
#19 0xb7af6381 in KApplication::notify(QObject*, QEvent*) () from /usr/lib/libkdeui.so.5
#20 0xb754ee3e in QCoreApplication::notifyInternal (this=0xbf885cc8, receiver=0xbf88381c, event=0xbf8836b0) at kernel/qcoreapplication.cpp:610
#21 0xb6bf067a in QWidgetPrivate::show_helper() () from /usr/lib/libQtGui.so.4
#22 0xb6bf1a81 in QWidget::setVisible(bool) () from /usr/lib/libQtGui.so.4
#23 0xb70753e6 in QDialog::setVisible(bool) () from /usr/lib/libQtGui.so.4
#24 0xb70745cb in QDialog::exec() () from /usr/lib/libQtGui.so.4
#25 0xb482161c in Part::slotPrintPreview (this=0x8108880) at /usr/src/debug/kdegraphics-4.3.0/okular/part.cpp:1688
#26 0xb482ca5d in Part::qt_metacall (this=0x8108880, _c=InvokeMetaMethod, _id=9, _a=0xbf8839d8) at /usr/src/debug/kdegraphics-4.3.0/build/okular/part.moc:184
#27 0xb7565324 in QMetaObject::activate (sender=0x81e32d0, from_signal_index=5, to_signal_index=6, argv=0xbf8839d8) at kernel/qobject.cpp:3113
#28 0xb7565801 in QMetaObject::activate (sender=0x81e32d0, m=0xb73ee108, from_local_signal_index=1, to_local_signal_index=2, argv=0xbf8839d8) at kernel/qobject.cpp:3207
#29 0xb6b8d115 in QAction::triggered(bool) () from /usr/lib/libQtGui.so.4
#30 0xb6b8e742 in QAction::activate(QAction::ActionEvent) () from /usr/lib/libQtGui.so.4
Comment 1 Dario Andres 2009-08-28 14:45:00 UTC
*** Bug 205384 has been marked as a duplicate of this bug. ***
Comment 2 Jan Hambrecht 2009-09-13 23:17:45 UTC
SVN commit 1023088 by jaham:

properly intialize pointers so we can check if they are valid before using them

BUG:205015



 M  +7 -1      KarbonView.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1023088