properly intialize pointers so we can check if they are valid before using them

BUG:205015


svn path=/trunk/koffice/; revision=1023088